...
                android:fontFamily="@font/lato_black"
                android:gravity="center"
                android:text="@string/stop"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/buttonRouteOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
...
